--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/levels/fivenightsatfredricks.fivenightsatfredricks
+GameDefaultMap=/Game/levels/final_level.final_level
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
-EditorStartupMap=/Game/levels/fivenightsatfredricks.fivenightsatfredricks
+EditorStartupMap=/Game/levels/final_level.final_level
 GameInstanceClass=/Game/blueprint/bp_singleton.bp_singleton_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
